--- a/templates/status.html
+++ b/templates/status.html
@@ -7,12 +7,12 @@
 
     <style>
         input {font-size: 18px;}
-        body {background-color:lightgrey;}
-        h2   {color:blue;}
+        body {background-color:lightblue; background-image: url("static/imgs/minecraft.jpg");}
+        h2   {color:white;}
         #submit1 {background-color:yellow;}
         #submit2 {background-color:#32CD32;}
         #submit3 {background-color:red;}
-        table, td, th {border-collapse: collapse; background-color:#bfbfbf; }
+        table, td, th {border-collapse: collapse; background-color:#9dd196; }
         th, td {padding: 15px; text-align: left; border-bottom: 1px solid black;}
     </style>
 </head>
