--- a/templates/status.html
+++ b/templates/status.html
@@ -6,13 +6,14 @@
 
 
     <style>
+
         input {font-size: 18px;}
-        body {background-color:lightblue; background-image: url("static/imgs/minecraft.jpg");}
-        h2   {color:white;}
+        body {background-color:lightgrey; background-image: url("static/imgs/minecraft.jpg"); background-size: 100% 200%;}
+        h2   {color:blue;}
         #submit1 {background-color:yellow;}
         #submit2 {background-color:#32CD32;}
         #submit3 {background-color:red;}
-        table, td, th {border-collapse: collapse; background-color:#9dd196; }
+        table, td, th {border-collapse: collapse; background-color:#bfbfbf; }
         th, td {padding: 15px; text-align: left; border-bottom: 1px solid black;}
     </style>
 </head>
