--- a/templates/status.html
+++ b/templates/status.html
@@ -7,7 +7,7 @@
 
     <style>
         input {font-size: 18px;}
-        body {background-color:lightblue; background-image: url("static/imgs/minecraft.jpg");}
+        body {background-color:lightblue; background-image: url("static/imgs/minecraft.jpg"); background-size: 100% 200%;}
         h2   {color:white;}
         #submit1 {background-color:yellow;}
         #submit2 {background-color:#32CD32;}
