--- a/templates/status.html
+++ b/templates/status.html
@@ -8,12 +8,16 @@
     <style>
 
         input {font-size: 18px;}
-        body {background-color:lightgrey; background-image: url("static/imgs/minecraft.jpg"); background-size: 100% 200%;}
-        h2   {color:blue;}
+        body {
+            background-color:lightgrey; 
+            background-image: url("static/imgs/minecraft.jpg"); 
+            background-size: 100% 200%;
+        }
+        h2   {color:white;}
         #submit1 {background-color:yellow;}
         #submit2 {background-color:#32CD32;}
         #submit3 {background-color:red;}
-        table, td, th {border-collapse: collapse; background-color:#bfbfbf; }
+        table, td, th {border-collapse: collapse; background-color:#9dd196; }
         th, td {padding: 15px; text-align: left; border-bottom: 1px solid black;}
     </style>
 </head>
