--- a/templates/status.html
+++ b/templates/status.html
@@ -1,3 +1,5 @@
+{% extends "bootstrap/base.html" %}
+{% block content %}
 
 
 <!DOCTYPE html>
@@ -6,21 +8,9 @@
     <meta charset="UTF-8">
     <title> Minecraft server control</title>
 
-
     <style>
-
-<<<<<<< Updated upstream
-        input {font-size: 18px;}
-        body {background-color:lightgrey; background-image: url("static/imgs/minecraft.jpg"); background-size: 100% 200%;}
-        h2   {color:blue;}
-        #submit1 {background-color:yellow;}
-        #submit2 {background-color:#32CD32;}
-        #submit3 {background-color:red;}
-        table, td, th {border-collapse: collapse; background-color:#bfbfbf; }
-        th, td {padding: 15px; text-align: left; border-bottom: 1px solid black;}
-    </style>
-=======
-
+        body {background-color:lightgrey; background-image: url("static/imgs/minecraft.jpg"); background-size: 50% 50%;}
+        h2   {color:white;}
         .panel-primary > .panel-heading {
           color: white;
           background-color: #067C64;
@@ -28,38 +18,41 @@
         .panel-primary{border-color: #067C64;}
 	</style>
 
->>>>>>> Stashed changes
 </head>
 <body>
 
-<h2> Minecraft server control</h2>
+	<div class="container">
+        <div class="page-header">
+            <h2>Minecraft server control </h2>
+            <span class="label label-info">Last Updated at {{ update_date}} </span>
+        </div>
+
+        <div class="panel panel-primary">
+            <div class="panel-heading">Server control</div>
+
+            <form id="form" method="POST" action="/status" role="form">
+                <div class="btn-group" role="group" aria-label="...">
+                    <button name="submit" type="submit" class="btn btn-default" value="refresh">Refresh</button>
+                    <button name="submit" type="submit" class="btn btn-default" value="start">Go Bananas - Start everything</button>
+                    <button name="submit" type="submit" class="btn btn-default" value="stop">Stop</button>
+                </div>
+
+            </form>
+        </div>
+
+        {% if server_data is defined %}
+        <div class="panel panel-primary"><div class="panel-heading">Server status</div>
+            <div class = "table-responsive">
+                <div id = "server_data">
+                    {{ server_data | safe }}
+                </div>
+            </div>
+        </div>
+        {% endif %}
+    </div>
 
 
-<div class="btn-group" role="group" aria-label="...">
-  <button type="button" class="btn btn-default">Refresh</button>
-  <button type="button" class="btn btn-default">Go Bananas - Start everything</button>
-  <button type="button" class="btn btn-default">Stop</button>
-</div>
-
-<div id="input">
-    <form id="form" method="POST" action="">
-
-
-
-        <input id="submit1" type="submit" value="Refresh" name="submit">
-        <input id="submit2" type="submit" value="Go Bananas - Start everything" name="submit">
-        <input id="submit3" type="submit" value="STOP everything" name="submit">
-
-    </form>
-</div>
-
-<h2> Current server status </h2>
-{% if server_data is defined %}
-  <div class = "table-responsive">
-      <div id = "server_data">
-          {{ server_data | safe }}
-      </div>
-      {% endif %}
-  </div>
 </body>
 </html>
+
+{% endblock %}
