table botom border

--- a/templates/status.html
+++ b/templates/status.html
@@ -16,6 +16,11 @@
           background-color: #067C64;
           border-color: #067C64;}
         .panel-primary{border-color: #067C64;}
+	.table {
+          width: 100%;
+          max-width: 100%;
+          margin-bottom: 0;
+        }
 	</style>
 
 </head>
